# metacto

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  fly.toml  prompts.txt  pyproject.toml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  tasks.py
backend/app/: __init__.py  config.py  db.py  deps.py  main.py  models.py  ranking.py  repository.py  schemas.py  seed.py  services.py
backend/app/api/: deps.py  requests.py
backend/app/core/: __init__.py  ranking.py  voting.py
backend/app/db/: base.py  models.py  session.py
backend/app/routers/: feature_requests.py  votes.py
backend/migrations/: env.py
backend/migrations/versions/: ddfc06d94b26_initial_schema.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_datetime.py  test_ranking.py  test_validation.py  test_votes.py  test_voting.py
docs/adr/: 0001-ranking-strategy.md  0002-auth-identity.md  0003-postgres-vote-count-consistency.md  0004-device-fingerprint-identity.md
frontend/: .prettierignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  api.ts  displayName.test.ts  displayName.ts  fingerprint.ts  format.test.ts  format.ts  identity.ts  main.tsx  sorting.test.ts  sorting.ts  styles.css  types.ts  vite-env.d.ts
frontend/src/components/: RequestCard.tsx  RequestForm.tsx  SortTabs.tsx  UserBar.tsx
