[project]
name = "feature-request-board"
version = "0.1.0"
description = "A feature request board — submit, list, upvote, and rank feature requests."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "itsdangerous>=2.2",
    "whenever>=0.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

# This is an application, not a distributable library — uv manages the venv and
# dependencies but does not try to build/install the project itself.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["backend"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear, simplify, comprehensions
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/*" = ["S101"]  # asserts are expected in tests

[tool.mypy]
# Strict types on the source; tests stay lint-only (ruff) to keep them terse.
python_version = "3.13"
strict = true
warn_unused_ignores = true
mypy_path = "backend"
files = ["backend/app"]
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
addopts = "-q"
filterwarnings = [
    # This Starlette version nudges toward httpx2 in its TestClient; harmless here.
    "ignore:Using `httpx` with `starlette.testclient`:Warning",
]
